[package]
description = 'Minimal wrappers for TON serialization using TL-schema'
edition = '2021'
name = 'ton_api'
version = '0.4.29'

[dependencies]
anyhow = '1.0'
byteorder = '1.4'
extfmt = '0.1'
hex = '0.4'
lazy_static = '1.4'
ordered-float = '2.8'
secstr = '0.4'
serde = '1.0'
serde_derive = '1.0'
thiserror = '1.0'
ton_dev_block = { git = 'https://github.com/ton-dev-dao/ton-dev-block.git', tag = '1.11.20' }

[build-dependencies]
serde_json = '1.0.52'
ton_tl_codegen = { path = '../ton_tl_codegen' }

